# usd-vnd-prediction

./: .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
models/xgboost_regression/: best_model.pkl
models/xgboost_regression/tuned_model/: tuned_model.pkl
notebooks/: data_cleaning.ipynb  feature_eng.ipynb  param_tuning_mlflow.ipynb  review_data.ipynb  s3_pushing.ipynb  target_formatting.ipynb  xgboost_classification.ipynb  xgboost_regression.ipynb
src/: api.py  feature_pipeline.py  inference_pipeline.py  training_pipeline.py  utils.py
usdvnd/processed/: cleaned.csv  cleaned_features_regression.csv  feature_engineered.csv
usdvnd/seperated/: usdvnd1994.csv  usdvnd1995.csv  usdvnd1996.csv  usdvnd1997.csv  usdvnd1998.csv  usdvnd1999.csv  usdvnd2000.csv  usdvnd2001.csv  usdvnd2002.csv  usdvnd2003.csv  usdvnd2004.csv  usdvnd2005.csv  usdvnd2006.csv  usdvnd2007.csv  usdvnd2008.csv  usdvnd2009.csv  usdvnd2010.csv  usdvnd2011.csv  usdvnd2012.csv  usdvnd2013.csv  usdvnd2014.csv  usdvnd2015.csv  usdvnd2016.csv  usdvnd2017.csv  usdvnd2018.csv  usdvnd2019.csv  usdvnd2020.csv  usdvnd2021.csv  usdvnd2022.csv  usdvnd2023.csv  usdvnd2024.csv  usdvnd2025.csv
